crates/swc_ecma_react_compiler/tests/fixtures/upstream/error.hoisting-simple-function-declaration/error.txt
Found 1 error:

Todo: Support functions with unreachable code that may contain hoisted declarations

error.hoisting-simple-function-declaration.ts:6:2
   4 |   }
   5 |   return baz(); // OK: FuncDecls are HoistableDeclarations that have both declaration and value hoisting
>  6 |   function baz() {
     |   ^^^^^^^^^^^^^^^^
>  7 |     return bar();
     | ^^^^^^^^^^^^^^^^^
>  8 |   }
     | ^^^^ Support functions with unreachable code that may contain hoisted declarations
   9 | }
  10 |
  11 | export const FIXTURE_ENTRYPOINT = {
